@@ -258,6 +258,8 @@ $wgPostCommitUpdateList = array();
 if ( $wgAjaxSearch ) $wgAjaxExportList[] = 'wfSajaxSearch';
 if ( $wgAjaxWatch ) $wgAjaxExportList[] = 'wfAjaxWatch';
 if ( $wgAjaxUploadDestCheck ) $wgAjaxExportList[] = 'UploadForm::ajaxGetExistsWarning';
+if( $wgAjaxLicencePreview )
+	$wgAjaxExportList[] = 'UploadForm::ajaxGetLicencePreview';
 
 wfSeedRandom();
 
